# codex-enhance

./: .gitignore  Cargo.toml  README.md  README_EN.md  pyproject.toml  setup.bat
codex_session_delete/: app_paths.py  bridge_routes.py  cdp.py  chrome_native_host.py  cli.py  file_tree.py  helper_server.py  history_index.py  installers.py  launcher.py  mcp_config.py  model_catalog.py  provider_history.py  provider_sync.py  settings_store.py  storage_adapter.py  updater.py  user_scripts.py  watcher.py  windows_installer.py
context/: 2026-06-18_13-55-13_delete-direct-no-confirm.md  2026-06-18_14-16-50_dex-1.5.0-direct-delete-release.md  2026-06-18_16-44-00_codex-weekly-review.md  2026-06-19_11-50-35_install-update-stall-diagnosis.md  2026-06-19_12-01-38_dex-update-stall-fix.md  2026-06-19_12-26-14_dex-1.5.1-update-release.md
crates/codex-plus-data/: Cargo.toml
crates/codex-plus-data/src/: lib.rs  provider_sync.rs  storage.rs
crates/codex-plus-data/tests/: provider_sync.rs  storage_adapter.rs
scripts/: __init__.py  build_renderer_inject.py  disposable_cdp_smoke.py  release-dex.ps1
tests/: test_app_paths.py  test_bridge_routes.py  test_cdp.py  test_chrome_native_host.py  test_disposable_smoke.py  test_file_tree.py  test_helper_server.py  test_history_index.py  test_installers.py  test_launcher_cli.py  test_launcher_user_scripts.py  test_mcp_config.py  test_model_catalog.py  test_model_whitelist_unlock.py  test_project_metadata.py  test_provider_history.py  test_provider_sync.py  test_readme.py  test_renderer_build.py  test_renderer_script.py  test_settings_store.py  test_setup_bat.py  test_storage_adapter.py  test_updater.py  test_user_scripts.py  test_watcher.py  test_windows_installer.py
(+110 files in other folders)
