[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-delete"
version = "1.0.12"
description = "External Codex App session delete injector"
authors = [{ name = "lgdy88" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "websocket-client>=1.7",
]

[project.urls]
Homepage = "https://github.com/lgdy88/codex-enhance"
Repository = "https://github.com/lgdy88/codex-enhance"
Issues = "https://github.com/lgdy88/codex-enhance/issues"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
codex-session-delete = "codex_session_delete.cli:main"

[tool.setuptools]
packages = ["codex_session_delete", "codex_session_delete.assets", "codex_session_delete.inject", "codex_session_delete.inject_src"]

[tool.setuptools.package-data]
codex_session_delete = ["assets/*", "inject/*.js", "inject_src/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
